# mygame

./: CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  glad.c  main.cpp  shader.cpp  traingle.cpp  vbo_and_vao.cpp  windows.cpp
gamewithmake/include/: window.h
gamewithmake/include/glad/: glad.h
gamewithmake/src/: Sample_GL3_2D.cpp  glad.c
gamewithmake/src/old/: Makefile
gamewithmake/src/old/include/: window.h
gamewithmake/src/old/include/glm/: Makefile  cmake_install.cmake
gamewithmake/src/old/src/: main.cpp  window.cpp
include/: glad.h  shader.h  traiangle.h  vbo_and_vao.h  window.h
